# rlunch

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_docker.sh  docker-compose.yml  flake.nix  plan.md  scratch.sql
.sqlx/: query-47ac60ea55bdb6ca3594ee397fb04c12e3c676467bf31344bb35b6f9ba534d86.json  query-60cf7ea78203c2db14d2a264893df431a51bc9144899f98b1686dc09f1672d8a.json  query-6b7fb85762059bfea68759a2034854e48a98c64997391a0318c5142fdf26433d.json  query-776e9e9f7bea4deb2b374acf4cddac8ae01da69183111b65755b9f71918fd696.json  query-9d9f4e218b21df517d2f5a196536984bdd75f105cca348ac7a851c7271d70865.json
migrations/: 1_setup.sql  2_data.sql
src/: cache.rs  cli.rs  data.rs  db.rs  lib.rs  models.rs  scrape.rs  scraper.rs  scrapers.rs  signals.rs  util.rs  web.rs
src/scrapers/: se.rs
src/scrapers/se/: gbg.rs
src/scrapers/se/gbg/: lh.rs  majorna.rs
src/scrapers/se/gbg/lh/: bistrot.rs  fawenah.rs  lhsite.rs
src/scrapers/se/gbg/majorna/: oldtown.rs
src/web/: api.rs  html.rs
static/: funcs.js  layout.css
templates/: dishes_for_site.html  layout.html  sites.html
