[package]
name = "rlunch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Odd E. Ebbesen <oddebb@gmail.com>"]
description = "A lunch menu scraper and server"
readme = "README.md"
publish = false
homepage = "https://github.com/oddlid/rlunch"
repository = "https://github.com/oddlid/rlunch"

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "stream",
] }
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.10", features = ["log", "signal"] }
clap = { version = "4.2.1", features = ["derive"] }
clap-verbosity-flag = "2.2"
anyhow = "1"
scraper = "0.20"
lazy_static = "1.5"
compact_str = { version = "0.8", features = ["serde", "markup"] }
nom = { version = "7.1" }
log = { version = "0.4" }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "json",
  "std",
  "fmt",
  "ansi",
] }
# dashmap = { version = "6.0", features = ["serde", "inline"] }

# Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
