[package]
name = "rlunch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Odd E. Ebbesen <oddebb@gmail.com>"]
description = "A restaurant menu scraper and server"
readme = "README.md"
publish = false
homepage = "https://github.com/oddlid/rlunch"
repository = "https://github.com/oddlid/rlunch"

[features]
bundled = []

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "stream",
] }
axum = { version = "0.7" }
axum-embed = { version = "0.1" }
rust-embed = { version = "8.5" }
tower-http = { version = "0.6", features = [
  "catch-panic",
  "timeout",
  "trace",
  "fs",
] }
minijinja = { version = "2.3", features = ["loader"] }
minijinja-embed = { version = "2.3" }
minijinja-autoreload = { version = "2.3" }
minijinja-contrib = { version = "2.3", features = ["datetime", "timezone"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.11" }
url = "2.5"
urlencoding = { version = "2.1" }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.13", features = ["log", "signal"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
clap-verbosity-flag = "2.2"
anyhow = "1.0"
thiserror = { version = "1.0" }
scraper = "0.20"
lazy_static = "1.5"
compact_str = { version = "0.8", features = ["serde", "markup"] }
nom = { version = "7.1" }
log = { version = "0.4" }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "json",
  "std",
  "fmt",
  "ansi",
] }
slugify = { version = "0.1" }
rand = { version = "0.8" }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
dotenvy = { version = "0.15" }
humantime = { version = "2.1" }

# scopeguard = { version = "1.2" }
# dashmap = { version = "6.0", features = ["serde", "inline"] }

[build-dependencies]
minijinja-embed = { version = "2.3" }

# Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
