[package]
name = "rlunch"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Odd E. Ebbesen <oddebb@gmail.com>"]
description = "A restaurant menu scraper and server"
readme = "README.md"
publish = false
homepage = "https://github.com/oddlid/rlunch"
repository = "https://github.com/oddlid/rlunch"

[features]
bundled = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
  "stream",
  "zstd",
] }
reqwest-middleware = { version = "0.4", features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
http-cache-reqwest = { version = "0.15", default-features = false, features = [
  "manager-moka",
] }
bincode = { version = "1.3" }
axum = { version = "0.8" }
axum-embed = { version = "0.1" }
rust-embed = { version = "8.5" }
tower-http = { version = "0.6", features = [
  "catch-panic",
  "compression-full",
  "timeout",
  "trace",
] }
minijinja = { version = "2.3", features = ["loader"] }
minijinja-embed = { version = "2.3" }
minijinja-autoreload = { version = "2.3" }
minijinja-contrib = { version = "2.3", features = ["datetime", "timezone"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.11" }
url = "2.5"
urlencoding = { version = "2.1" }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-cron-scheduler = { version = "0.14", features = ["log", "signal"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
clap-verbosity-flag = "3.0"
anyhow = "1.0"
thiserror = { version = "2.0" }
scraper = "0.23"
lazy_static = "1.5"
compact_str = { version = "0.9", features = ["serde", "markup"] }
nom = { version = "8.0" }
log = { version = "0.4" }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "smallvec",
  "std",
] }
slugify = { version = "0.1" }
rand = { version = "0.9" }
sqlx = { version = "0.8", features = [
  "chrono",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
dotenvy = { version = "0.15" }
humantime = { version = "2.1" }
rust_decimal = { version = "1.36", default-features = false, features = [
  "std",
] }
shadow-rs = { version = "1.0" }

# hashbrown = { version = "0.15", features = ["serde"] }
# scopeguard = { version = "1.2" }
# dashmap = { version = "6.0", features = ["serde", "inline"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[build-dependencies]
minijinja-embed = { version = "2.3" }
shadow-rs = { version = "1.0" }

# Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
